Fix: dump.css | div.OP_DUMP td { text-align:left; }

--- a/dump.css
+++ b/dump.css
@@ -33,6 +33,10 @@ div.OP_DUMP th {
 	cursor: pointer;
 }
 
+div.OP_DUMP td {
+	text-align: left;
+}
+
 div.OP_DUMP td > span {
 	padding: 0.25em;
 }
